// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows attaching file 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`exceed file size 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="containerError Alert-prppfq-0 index__c-callout___K1eQ- index__c-callout--error___NED0s ktWtOK"
          data-garden-id="notifications.alert"
          data-garden-version="7.0.2"
          data-testid="error-message"
          role="alert"
          type="error"
        >
          <div
            class="previewError Title-sc-1329g54-0 index__c-callout__title___e5tnb fRGHFa"
            data-garden-id="notifications.title"
            data-garden-version="7.0.2"
          >
            some.csv
          </div>
          <div
            class="secondaryTextError"
          >
            The file is too big. Please attach files that are less than 5 MB.
          </div>
          <button
            class="Close-oze0eo-0 index__c-callout__close___OudEV czaHBx"
            data-garden-id="notifications.close"
            data-garden-version="7.0.2"
            type="button"
          />
        </div>
      </div>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`exceed maximum number of files 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                1.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-2"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                2.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-3"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                3.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-4"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                4.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-5"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                5.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div
        class="error"
        data-testid="error-message"
      >
        You have already reached the limit of (5) attachments
      </div>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed upload 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="containerError Alert-prppfq-0 index__c-callout___K1eQ- index__c-callout--error___NED0s ktWtOK"
          data-garden-id="notifications.alert"
          data-garden-version="7.0.2"
          data-testid="error-message"
          role="alert"
          type="error"
        >
          <div
            class="previewError Title-sc-1329g54-0 index__c-callout__title___e5tnb fRGHFa"
            data-garden-id="notifications.title"
            data-garden-version="7.0.2"
          >
            some.csv
          </div>
          <div
            class="secondaryTextError"
          >
            There was a problem attaching this file. Please try again.
          </div>
          <button
            class="Close-oze0eo-0 index__c-callout__close___OudEV czaHBx"
            data-garden-id="notifications.close"
            data-garden-version="7.0.2"
            type="button"
          />
        </div>
      </div>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`picks the correct icon types 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-pdf"
              data-testid="Icon--preview-pdf"
              type="Icon--preview-pdf"
            >
              <svg
                aria-hidden="true"
                realfilename="file-pdf.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.pdf
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-2"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-zip"
              data-testid="Icon--preview-zip"
              type="Icon--preview-zip"
            >
              <svg
                aria-hidden="true"
                realfilename="file-zip.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.rar
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-3"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-presentation"
              data-testid="Icon--preview-presentation"
              type="Icon--preview-presentation"
            >
              <svg
                aria-hidden="true"
                realfilename="file-presentation.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.ppt
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-4"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-zip"
              data-testid="Icon--preview-zip"
              type="Icon--preview-zip"
            >
              <svg
                aria-hidden="true"
                realfilename="file-zip.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.zip
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-5"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              data-testid="Icon--preview-document"
              type="Icon--preview-document"
            >
              <svg
                aria-hidden="true"
                realfilename="file-document.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.doc
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-6"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              data-testid="Icon--preview-document"
              type="Icon--preview-document"
            >
              <svg
                aria-hidden="true"
                realfilename="file-document.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.docx
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-7"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-presentation"
              data-testid="Icon--preview-presentation"
              type="Icon--preview-presentation"
            >
              <svg
                aria-hidden="true"
                realfilename="file-presentation.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.pptx
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-8"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-presentation"
              data-testid="Icon--preview-presentation"
              type="Icon--preview-presentation"
            >
              <svg
                aria-hidden="true"
                realfilename="file-presentation.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.key
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-9"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.xls
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-10"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.xlsx
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-11"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.numbers
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-12"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              data-testid="Icon--preview-document"
              type="Icon--preview-document"
            >
              <svg
                aria-hidden="true"
                realfilename="file-document.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.blah.txt
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-13"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              data-testid="Icon--preview-document"
              type="Icon--preview-document"
            >
              <svg
                aria-hidden="true"
                realfilename="file-document.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.rtf
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-14"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              data-testid="Icon--preview-document"
              type="Icon--preview-document"
            >
              <svg
                aria-hidden="true"
                realfilename="file-document.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.pag
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-15"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-document"
              data-testid="Icon--preview-document"
              type="Icon--preview-document"
            >
              <svg
                aria-hidden="true"
                realfilename="file-document.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.pages
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-16"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              data-testid="Icon--preview-image"
              type="Icon--preview-image"
            >
              <svg
                aria-hidden="true"
                realfilename="file-image.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.png
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-17"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              data-testid="Icon--preview-image"
              type="Icon--preview-image"
            >
              <svg
                aria-hidden="true"
                realfilename="file-image.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.jpg
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-18"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              data-testid="Icon--preview-image"
              type="Icon--preview-image"
            >
              <svg
                aria-hidden="true"
                realfilename="file-image.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.jpeg
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-19"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-image"
              data-testid="Icon--preview-image"
              type="Icon--preview-image"
            >
              <svg
                aria-hidden="true"
                realfilename="file-image.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.gif
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-20"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-default"
              data-testid="Icon--preview-default"
              type="Icon--preview-default"
            >
              <svg
                aria-hidden="true"
                realfilename="file.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.svg
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-21"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-default"
              data-testid="Icon--preview-default"
              type="Icon--preview-default"
            >
              <svg
                aria-hidden="true"
                realfilename="file.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.mp4
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-22"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-default"
              data-testid="Icon--preview-default"
              type="Icon--preview-default"
            >
              <svg
                aria-hidden="true"
                realfilename="file.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.random
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`remove attachment 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with mobile styles 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add file from device
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`successful upload 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments (1)
      </label>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.csv
              </div>
              <div
                class="secondaryText"
              >
                1 KB
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`uploading in progress upload 1`] = `
<div>
  <div>
    <div
      class="container"
      data-testid="attachment-list-container"
    >
      <label
        class="label"
        for="dropzone-input"
      >
        Attachments
      </label>
      <div>
        <div
          class="container attachment"
          data-testid="file-name-1"
        >
          <div
            class="preview"
          >
            <span
              class="container iconPreview Icon--preview-spreadsheet"
              data-testid="Icon--preview-spreadsheet"
              type="Icon--preview-spreadsheet"
            >
              <svg
                aria-hidden="true"
                realfilename="file-spreadsheet.svg"
              />
            </span>
            <div
              class="description"
              data-testid="description"
            >
              <div
                class="previewName"
              >
                some.csv
              </div>
              <div
                class="secondaryText"
              >
                Uploading...
              </div>
            </div>
            <span
              class="container icon Icon--close"
              data-testid="Icon--close"
              role="button"
              tabindex="0"
              type="Icon--close"
            >
              <svg
                aria-hidden="true"
                realfilename="x-stroke.svg"
              />
            </span>
          </div>
          <div
            class="container"
          >
            <div
              class="progressBar"
              data-testid="progress-bar"
              style="width: 55%;"
            />
          </div>
        </div>
      </div>
      <div
        data-testid="dropzone"
      >
        <div
          class="dropzone "
          role="presentation"
        >
          <div
            class="dropzoneChild"
          >
            <span
              class="container icon Icon--paperclip-small"
              data-testid="Icon--paperclip-small"
              type="Icon--paperclip-small"
            >
              <svg
                aria-hidden="true"
                realfilename="attachment.svg"
              />
            </span>
            <div
              class="dropzoneChildLabel"
            >
              Add up to 5 files
            </div>
          </div>
          <input
            id="dropzone-input"
            multiple=""
            style="display: none;"
            type="file"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
